--- a/presentation/slides/Parthum_Wheeler_Slides_files/remark-css/default.css
+++ b/presentation/slides/Parthum_Wheeler_Slides_files/remark-css/default.css
@@ -1,13 +1,3 @@
-a, a > code {
-  color: rgb(249, 38, 114);
-  text-decoration: none;
-}
-.footnote {
-  position: absolute;
-  bottom: 3em;
-  padding-right: 4em;
-  font-size: 90%;
-}
 .remark-code-line-highlighted     { background-color: #ffff88; }
 
 .inverse {
@@ -15,35 +5,56 @@ a, a > code {
   color: #d6d6d6;
   text-shadow: 0 0 20px #333;
 }
+
 .inverse h1, .inverse h2, .inverse h3 {
   color: #f3f3f3;
 }
+
 /* Two-column layout */
+
 .left-column {
   color: #777;
   width: 20%;
   height: 92%;
   float: left;
 }
+
 .left-column h2:last-of-type, .left-column h3:last-child {
   color: #000;
 }
+
 .right-column {
   width: 75%;
   float: right;
   padding-top: 1em;
 }
+
 .pull-left {
   float: left;
-  width: 47%;
+  width: 49%;
 }
+
 .pull-right {
   float: right;
-  width: 47%;
+  width: 49%;
 }
+
+.pull-left-c {
+  float: left;
+  width: 49%;
+  text-align: center;
+}
+
+.pull-right-c {
+  float: left;
+  width: 49%;
+  text-align: center;
+}
+
 .pull-right + * {
   clear: both;
 }
+
 img, video, iframe {
   max-width: 100%;
 }
@@ -51,11 +62,13 @@ blockquote {
   border-left: solid 5px lightgray;
   padding-left: 1em;
 }
+
 .remark-slide table {
   margin: auto;
   border-top: 1px solid #666;
   border-bottom: 1px solid #666;
 }
+
 .remark-slide table thead th { border-bottom: 1px solid #ddd; }
 th, td { padding: 5px; }
 .remark-slide thead, .remark-slide tfoot, .remark-slide tr:nth-child(even) { background: #eee }
@@ -69,4 +82,15 @@ th, td { padding: 5px; }
     top: 0 !important;
     left: 0 !important;
   }
+}
+
+.footnote {
+  position: absolute;
+  bottom: 3em;
+  padding-right: 4em;
+  font-size: 90%;
+}
+
+.aligncenter {
+    text-align: center;
 }
